// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sheet [snapshot] > default (right side) 1`] = `
<dialog
  aria-describedby="_r_3a_"
  aria-labelledby="_r_39_"
  class="vesper-sheet vesper-sheet-right"
>
  <div
    class="vesper-sheet-content"
  >
    <div
      class="vesper-sheet-header"
    >
      <div
        class="vesper-sheet-title-description"
      >
        <p
          class="vesper-typography vesper-typography-heading-sm vesper-sheet-title"
          id="_r_39_"
        >
          Sheet title
        </p>
        <p
          class="vesper-typography vesper-typography-copy-sm vesper-sheet-description"
          id="_r_3a_"
        >
          This is a description of the sheet content.
        </p>
      </div>
      <button
        aria-label="Close sheet"
        class="vesper-button vesper-button-md vesper-button-tertiary vesper-icon-button"
        type="button"
      >
        <span
          class="vesper-button-icon"
        >
          <svg
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="vesper-scroll-area vesper-typography vesper-typography-copy-md vesper-sheet-children"
      role="presentation"
      style="position: relative; --scroll-area-corner-height: 0px; --scroll-area-corner-width: 0px;"
    >
      <div
        class="vesper-scroll-area-viewport base-ui-disable-scrollbar"
        data-id="base-ui-_r_3b_-viewport"
        role="presentation"
        style="overflow: scroll;"
        tabindex="-1"
      >
        <div
          role="presentation"
          style="min-width: fit-content;"
        />
      </div>
    </div>
  </div>
</dialog>
`;

exports[`sheet [snapshot] > left side 1`] = `
<dialog
  aria-describedby="_r_3d_"
  aria-labelledby="_r_3c_"
  class="vesper-sheet vesper-sheet-left"
>
  <div
    class="vesper-sheet-content"
  >
    <div
      class="vesper-sheet-header"
    >
      <div
        class="vesper-sheet-title-description"
      >
        <p
          class="vesper-typography vesper-typography-heading-sm vesper-sheet-title"
          id="_r_3c_"
        >
          Sheet title
        </p>
        <p
          class="vesper-typography vesper-typography-copy-sm vesper-sheet-description"
          id="_r_3d_"
        >
          This is a description of the sheet content.
        </p>
      </div>
      <button
        aria-label="Close sheet"
        class="vesper-button vesper-button-md vesper-button-tertiary vesper-icon-button"
        type="button"
      >
        <span
          class="vesper-button-icon"
        >
          <svg
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="vesper-scroll-area vesper-typography vesper-typography-copy-md vesper-sheet-children"
      role="presentation"
      style="position: relative; --scroll-area-corner-height: 0px; --scroll-area-corner-width: 0px;"
    >
      <div
        class="vesper-scroll-area-viewport base-ui-disable-scrollbar"
        data-id="base-ui-_r_3e_-viewport"
        role="presentation"
        style="overflow: scroll;"
        tabindex="-1"
      >
        <div
          role="presentation"
          style="min-width: fit-content;"
        />
      </div>
    </div>
  </div>
</dialog>
`;

exports[`sheet [snapshot] > left side with buttons and children 1`] = `
<dialog
  aria-describedby="_r_3m_"
  aria-labelledby="_r_3l_"
  class="vesper-sheet vesper-sheet-left"
>
  <div
    class="vesper-sheet-content"
  >
    <div
      class="vesper-sheet-header"
    >
      <div
        class="vesper-sheet-title-description"
      >
        <p
          class="vesper-typography vesper-typography-heading-sm vesper-sheet-title"
          id="_r_3l_"
        >
          Sheet title
        </p>
        <p
          class="vesper-typography vesper-typography-copy-sm vesper-sheet-description"
          id="_r_3m_"
        >
          This is a description of the sheet content.
        </p>
      </div>
      <button
        aria-label="Close sheet"
        class="vesper-button vesper-button-md vesper-button-tertiary vesper-icon-button"
        type="button"
      >
        <span
          class="vesper-button-icon"
        >
          <svg
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="vesper-scroll-area vesper-typography vesper-typography-copy-md vesper-sheet-children"
      role="presentation"
      style="position: relative; --scroll-area-corner-height: 0px; --scroll-area-corner-width: 0px;"
    >
      <div
        class="vesper-scroll-area-viewport base-ui-disable-scrollbar"
        data-id="base-ui-_r_3n_-viewport"
        role="presentation"
        style="overflow: scroll;"
        tabindex="-1"
      >
        <div
          role="presentation"
          style="min-width: fit-content;"
        >
          Sheet body content
        </div>
      </div>
    </div>
    <div
      class="vesper-sheet-buttons"
    >
      <button
        class="vesper-button vesper-button-lg vesper-button-tertiary"
      >
        Cancel
      </button>
      <button
        class="vesper-button vesper-button-lg vesper-button-contrast"
      >
        Save
      </button>
    </div>
  </div>
</dialog>
`;

exports[`sheet [snapshot] > popover mode (left side with buttons and children) 1`] = `
<dialog
  aria-describedby="_r_3s_"
  aria-labelledby="_r_3r_"
  class="vesper-sheet vesper-sheet-left"
  popover="manual"
>
  <div
    class="vesper-sheet-content"
  >
    <div
      class="vesper-sheet-header"
    >
      <div
        class="vesper-sheet-title-description"
      >
        <p
          class="vesper-typography vesper-typography-heading-sm vesper-sheet-title"
          id="_r_3r_"
        >
          Sheet title
        </p>
        <p
          class="vesper-typography vesper-typography-copy-sm vesper-sheet-description"
          id="_r_3s_"
        >
          This is a description of the sheet content.
        </p>
      </div>
      <button
        aria-label="Close sheet"
        class="vesper-button vesper-button-md vesper-button-tertiary vesper-icon-button"
        type="button"
      >
        <span
          class="vesper-button-icon"
        >
          <svg
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="vesper-scroll-area vesper-typography vesper-typography-copy-md vesper-sheet-children"
      role="presentation"
      style="position: relative; --scroll-area-corner-height: 0px; --scroll-area-corner-width: 0px;"
    >
      <div
        class="vesper-scroll-area-viewport base-ui-disable-scrollbar"
        data-id="base-ui-_r_3t_-viewport"
        role="presentation"
        style="overflow: scroll;"
        tabindex="-1"
      >
        <div
          role="presentation"
          style="min-width: fit-content;"
        >
          Sheet body content
        </div>
      </div>
    </div>
    <div
      class="vesper-sheet-buttons"
    >
      <button
        class="vesper-button vesper-button-lg vesper-button-tertiary"
      >
        Cancel
      </button>
      <button
        class="vesper-button vesper-button-lg vesper-button-contrast"
      >
        Save
      </button>
    </div>
  </div>
</dialog>
`;

exports[`sheet [snapshot] > popover mode (right side) 1`] = `
<dialog
  aria-describedby="_r_3p_"
  aria-labelledby="_r_3o_"
  class="vesper-sheet vesper-sheet-right"
  popover="manual"
>
  <div
    class="vesper-sheet-content"
  >
    <div
      class="vesper-sheet-header"
    >
      <div
        class="vesper-sheet-title-description"
      >
        <p
          class="vesper-typography vesper-typography-heading-sm vesper-sheet-title"
          id="_r_3o_"
        >
          Sheet title
        </p>
        <p
          class="vesper-typography vesper-typography-copy-sm vesper-sheet-description"
          id="_r_3p_"
        >
          This is a description of the sheet content.
        </p>
      </div>
      <button
        aria-label="Close sheet"
        class="vesper-button vesper-button-md vesper-button-tertiary vesper-icon-button"
        type="button"
      >
        <span
          class="vesper-button-icon"
        >
          <svg
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="vesper-scroll-area vesper-typography vesper-typography-copy-md vesper-sheet-children"
      role="presentation"
      style="position: relative; --scroll-area-corner-height: 0px; --scroll-area-corner-width: 0px;"
    >
      <div
        class="vesper-scroll-area-viewport base-ui-disable-scrollbar"
        data-id="base-ui-_r_3q_-viewport"
        role="presentation"
        style="overflow: scroll;"
        tabindex="-1"
      >
        <div
          role="presentation"
          style="min-width: fit-content;"
        />
      </div>
    </div>
  </div>
</dialog>
`;

exports[`sheet [snapshot] > with buttons 1`] = `
<dialog
  aria-describedby="_r_3j_"
  aria-labelledby="_r_3i_"
  class="vesper-sheet vesper-sheet-right"
>
  <div
    class="vesper-sheet-content"
  >
    <div
      class="vesper-sheet-header"
    >
      <div
        class="vesper-sheet-title-description"
      >
        <p
          class="vesper-typography vesper-typography-heading-sm vesper-sheet-title"
          id="_r_3i_"
        >
          Sheet title
        </p>
        <p
          class="vesper-typography vesper-typography-copy-sm vesper-sheet-description"
          id="_r_3j_"
        >
          This is a description of the sheet content.
        </p>
      </div>
      <button
        aria-label="Close sheet"
        class="vesper-button vesper-button-md vesper-button-tertiary vesper-icon-button"
        type="button"
      >
        <span
          class="vesper-button-icon"
        >
          <svg
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="vesper-scroll-area vesper-typography vesper-typography-copy-md vesper-sheet-children"
      role="presentation"
      style="position: relative; --scroll-area-corner-height: 0px; --scroll-area-corner-width: 0px;"
    >
      <div
        class="vesper-scroll-area-viewport base-ui-disable-scrollbar"
        data-id="base-ui-_r_3k_-viewport"
        role="presentation"
        style="overflow: scroll;"
        tabindex="-1"
      >
        <div
          role="presentation"
          style="min-width: fit-content;"
        />
      </div>
    </div>
    <div
      class="vesper-sheet-buttons"
    >
      <button
        class="vesper-button vesper-button-lg vesper-button-tertiary"
      >
        Cancel
      </button>
      <button
        class="vesper-button vesper-button-lg vesper-button-contrast"
      >
        Save
      </button>
    </div>
  </div>
</dialog>
`;

exports[`sheet [snapshot] > with children 1`] = `
<dialog
  aria-describedby="_r_3g_"
  aria-labelledby="_r_3f_"
  class="vesper-sheet vesper-sheet-right"
>
  <div
    class="vesper-sheet-content"
  >
    <div
      class="vesper-sheet-header"
    >
      <div
        class="vesper-sheet-title-description"
      >
        <p
          class="vesper-typography vesper-typography-heading-sm vesper-sheet-title"
          id="_r_3f_"
        >
          Sheet title
        </p>
        <p
          class="vesper-typography vesper-typography-copy-sm vesper-sheet-description"
          id="_r_3g_"
        >
          This is a description of the sheet content.
        </p>
      </div>
      <button
        aria-label="Close sheet"
        class="vesper-button vesper-button-md vesper-button-tertiary vesper-icon-button"
        type="button"
      >
        <span
          class="vesper-button-icon"
        >
          <svg
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="vesper-scroll-area vesper-typography vesper-typography-copy-md vesper-sheet-children"
      role="presentation"
      style="position: relative; --scroll-area-corner-height: 0px; --scroll-area-corner-width: 0px;"
    >
      <div
        class="vesper-scroll-area-viewport base-ui-disable-scrollbar"
        data-id="base-ui-_r_3h_-viewport"
        role="presentation"
        style="overflow: scroll;"
        tabindex="-1"
      >
        <div
          role="presentation"
          style="min-width: fit-content;"
        >
          Sheet body content
        </div>
      </div>
    </div>
  </div>
</dialog>
`;

exports[`sheet [snapshot] > with form 1`] = `
<dialog
  aria-describedby="_r_3v_"
  aria-labelledby="_r_3u_"
  class="vesper-sheet vesper-sheet-right"
>
  <form
    class="vesper-sheet-content"
    id="modal-form"
    method="post"
  >
    <div
      class="vesper-sheet-header"
    >
      <div
        class="vesper-sheet-title-description"
      >
        <p
          class="vesper-typography vesper-typography-heading-sm vesper-sheet-title"
          id="_r_3u_"
        >
          Sheet title
        </p>
        <p
          class="vesper-typography vesper-typography-copy-sm vesper-sheet-description"
          id="_r_3v_"
        >
          This is a description of the sheet content.
        </p>
      </div>
      <button
        aria-label="Close sheet"
        class="vesper-button vesper-button-md vesper-button-tertiary vesper-icon-button"
        type="button"
      >
        <span
          class="vesper-button-icon"
        >
          <svg
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="vesper-scroll-area vesper-typography vesper-typography-copy-md vesper-sheet-children"
      role="presentation"
      style="position: relative; --scroll-area-corner-height: 0px; --scroll-area-corner-width: 0px;"
    >
      <div
        class="vesper-scroll-area-viewport base-ui-disable-scrollbar"
        data-id="base-ui-_r_40_-viewport"
        role="presentation"
        style="overflow: scroll;"
        tabindex="-1"
      >
        <div
          role="presentation"
          style="min-width: fit-content;"
        />
      </div>
    </div>
    <div
      class="vesper-sheet-buttons"
    >
      <button
        class="vesper-button vesper-button-lg vesper-button-tertiary"
      >
        Cancel
      </button>
      <button
        class="vesper-button vesper-button-lg vesper-button-contrast"
      >
        Save
      </button>
    </div>
  </form>
</dialog>
`;
